--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 						<li><a href="#intro">Welcome</a></li>
 						<li><a href="#one">Waiting Room</a></li>
 						<li><a href="#two">Exam Room</a></li>
-						<li><a href="#work">?</a></li>
-						<li><a href="#contact">?</a></li>
+						<li><a href="#work">[HEADING 3]</a></li>
+						<li><a href="#contact">[HEADING 4]</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -47,7 +47,7 @@
 			<section id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>What I Do</h2>
+						<h2>The Waiting Room</h2>
 					</header>
 					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
 					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
@@ -60,7 +60,7 @@
 			<section id="two" class="main style2 left dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>Who I Am</h2>
+						<h2>The Exam Room</h2>
 					</header>
 					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
 					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
@@ -141,7 +141,7 @@
 
 				<!-- Menu -->
 					<ul class="menu">
-						<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Autism Program</li><li><a href="https://www.bmc.org/pediatrics-autism-program">Boston Medical Center</a></li>
 					</ul>
 
 			</footer>
