--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<ul>
 						<li><a href="#intro">Welcome</a></li>
 						<li><a href="#one">Waiting Room</a></li>
-						<li><a href="#two">Exam Room</a></li>
+						<li><a href="examroom.html">Exam Room</a></li>
 						<li><a href="#work">[HEADING 3]</a></li>
 						<li><a href="#contact">[HEADING 4]</a></li>
 					</ul>
@@ -112,7 +112,7 @@
 						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
 					</header>
 					<div class="box">
-						<form method="post" action="#">
+						<form method="post" action="contact.php">
 							<div class="fields">
 								<div class="field half"><input type="text" name="name" placeholder="Name" /></div>
 								<div class="field half"><input type="email" name="email" placeholder="Email" /></div>
@@ -131,17 +131,13 @@
 
 				<!-- Icons -->
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
+						<li><a href="https://facebook.com/BMCAutismProgram/" class="icon brands fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/bmcautismprogram/?hl=en" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
 					</ul>
 
 				<!-- Menu -->
 					<ul class="menu">
-						<li>&copy; Autism Program</li><li><a href="https://www.bmc.org/pediatrics-autism-program">Boston Medical Center</a></li>
+						<li>&copy; Autism Program</li><li><a href="https://www.bmc.org/pediatrics-autism-program" target="_blank">Boston Medical Center</a></li>
 					</ul>
 
 			</footer>
