all finished except exam room

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						objects you're liking to encounter on your next doctor's visit at BMC!
 					</p>
 					<footer>
-						<a href="#one" class="button style2 down" title="Next section."></a>
+						<a href="#one" class="button style2 down" title="Go to the next section."></a>
 					</footer>
 				</div>
 			</section>
@@ -55,7 +55,7 @@
 						<a href="waitingroom.html" class="button" title="Click here to enter the Waiting Room!">Enter the Waiting Room!</a>
 					</div>
 				</div>
-				<a href="#two" class="button style2 down anchored" title="Next section."></a>
+				<a href="#two" class="button style2 down anchored" title="Go to the next section."></a>
 			</section>
 
 		<!-- Two -->
@@ -71,7 +71,7 @@
 						<a href="examroom.html" class="button" title="Click here to enter the Exam Room!">Enter the Exam Room!</a>
 					</div>
 				</div>
-				<a href="#contact" class="button style2 down anchored" title="Next section."></a>
+				<a href="#contact" class="button style2 down anchored" title="Go to the next section."></a>
 			</section>
 
 		<!-- This section can be re-vamped in the future, but for now, we don't have anything to put here. -->
@@ -118,7 +118,7 @@
 						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
 					</header>
 					<div class="box">
-						<form method="post" action="https://formspree.io/f/xwkyvjdv">
+						<form method="post" action="https://formspree.io/f/mdobaqzn">
 							<div class="fields">
 								<div class="field half"><input type="text" name="name" placeholder="Name" /></div>
 								<div class="field half"><input type="email" name="email" placeholder="Email" /></div>
