--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<h2>Hello!</h2>
 					</header>
 					<p>Welcome to the <strong>Virtual Exam Room</strong>, where you can hover over and click on <br />
-						objects you're liking to encounter on your next doctor's visit at BMC!
+						objects you're liking to encounter on your next doctor's visit at Boston Medical Center!
 					</p>
 					<footer>
 						<a href="#one" class="button style2 down" title="Go to the next section."></a>
@@ -48,9 +48,7 @@
 					<header>
 						<h2>The Waiting Room</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>Explore the waiting room on the 6th floor of Yawkey at Boston Medical Center by clicking on the different items you will find during your visit. </p>
 					<div style="display: flex; justify-content: center;">
 						<a href="waitingroom.html" class="button" title="Click here to enter the Waiting Room!">Enter the Waiting Room!</a>
 					</div>
@@ -64,9 +62,7 @@
 					<header>
 						<h2>The Exam Room</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>Explore the exam room on the 6th floor of Yawkey at Boston Medical Center by clicking on the different items you will find during your visit. Watch a video or read a story about how each item will be used! </p>
 					<div style="display: flex; justify-content: center;">
 						<a href="examroom.html" class="button" title="Click here to enter the Exam Room!">Enter the Exam Room!</a>
 					</div>
@@ -114,8 +110,8 @@
 			<section id="contact" class="main style3 secondary">
 				<div class="content">
 					<header>
-						<h2>Say Hello.</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
+						<h2>Contact Us!</h2>
+						<p>Any questions, comments, or concerns? Send us a message using the form below!</p>
 					</header>
 					<div class="box">
 						<form method="post" action="https://formspree.io/f/mdobaqzn">
